--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	    }
     ],
     "require": {
-        "symfony/console": "*",
+        "symfony/console": "~4.4.0",
     },
 
     "autoload": {
